syntax = "proto3";

import "channel/service/channel_requests.proto";
import "channel/service/channel_responses.proto";

option java_package = "io.github.vinicreis.domain.channel.service";

service ChannelService {
  rpc list (ListRequest) returns (ListResponse) {}
  rpc add (AddRequest) returns (AddResponse) {}
  rpc removeById (RemoveByIdRequest) returns (RemoveByIdResponse) {}
}
