syntax = "proto3";

message TextMessage {
  string content = 1;
}
