syntax = "proto3";

option java_package = "io.github.vinicreis.pubsub.server.model.data";

enum SubscriptionEvent {
  PROCESSING = 0;
  ACTIVE = 1;
  UPDATE = 2;
  FINISHED = 3;
}
