syntax = "proto3";

import "proto/io/github/vinicreis/pubsub/server/core/model/data/text_message.proto";

option java_package = "io.github.vinicreis.pubsub.server.model.request";

message PostRequest {
  string queueId = 1;
  repeated TextMessage content = 2;
}
