syntax = "proto3";

import "proto/io/github/vinicreis/pubsub/server/core/model/data/result.proto";
import "proto/io/github/vinicreis/pubsub/server/core/model/data/queue.proto";

option java_package = "io.github.vinicreis.pubsub.server.model.response";

message RemoveResponse {
  Result result = 1;
  optional Queue queue = 2;
  optional string message = 3;
}
